Fix overflow on mobile devices

--- a/assets/css/default.scss
+++ b/assets/css/default.scss
@@ -4,6 +4,11 @@
     }
 }
 
+html, 
+body {
+    overflow-x: hidden;
+}
+
 table {
     border-collapse: collapse;
     width: 100%;
